--- a/package.json
+++ b/package.json
@@ -16,18 +16,22 @@
     "@babel/preset-env": "^7.14.7",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^5.2.6",
     "csv-loader": "^3.0.3",
     "file-loader": "^6.2.0",
+    "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
     "pug": "^3.0.2",
     "pug-loader": "^2.4.0",
     "sass": "^1.35.1",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.0.0",
+    "url-loader": "^4.1.1",
     "webpack": "^5.41.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.8.0",
     "xml-loader": "^1.2.1"
   }
 }
